--- a/wuutodo/pubspec.yaml
+++ b/wuutodo/pubspec.yaml
@@ -1,10 +1,10 @@
 name: wuutodo
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  equatable: ^2.0.5
+  flex_color_scheme: ^7.2.0
+  flutter_riverpod: ^2.3.6
+  font_awesome_flutter: ^10.5.0
+  gap: ^3.0.1
+  go_router: ^10.0.0
+  google_fonts: ^5.1.0
+  intl: ^0.18.1
+  path: ^1.8.3
+  sqflite: ^2.3.0
 
 flutter:
   uses-material-design: true
